GS-13424 Fixed heap dump failure on Java 9,10,11